platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_110.platter
start() {
  piece of badexpr = 1 -  ;
}